# python-gui-app-template

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  pyproject.toml
assets/stylesheets/home/: Home.qss
cmake/modules/security/: auth.py.debug.in  key.py.debug.in
scripts/build_modules/: __init__.py  main.py
scripts/cmake_gen/: main.py
src/project/: __init__.py  globals.py  main.py  settings.py
src/project/app/: __init__.py  app.py
src/project/interface/: Interface.py  __init__.py  entry.py
src/project/interface/home/: Home.py  __init__.py
src/project/utils/interface/: QLayoutWrapper.py  QRouter.py  QSSLoader.py  QWidgetWrapper.py  __init__.py
