[project]
name = "python-gui-app-template"
version = "1.0.0"
description = "Base para GUI Apps genéricos feitos com Python + PySide6"
authors = [
    {name = "D4rkw42", email = "william.conceicao042@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pyside6 (>=6.10.1,<7.0.0)",
]

[project.urls]
Repository = "https://github.com/D4rkw42/python-gui-app-template"
Documentation = "https://d4rkw42.github.io/python-gui-app-template/docs"

[tool.poetry]
packages = [
    {include = "project", from = "src"},
    {include = "security", from = "bin/modules"},
    {include = "build_modules", from = "scripts"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "project.main:main" # runs de project

[tool.poetry.plugins."console_scripts"]
build = "build_modules.main:build" # generates cmake configurations and compiles the modules
compile = "build_modules.main:compile" # just compile the modules under current cmake configurations
clear = "build_modules.main:clear" # clear cmake configurations

[dependency-groups]
dev = [
    "pybind11 (>=3.0.1,<4.0.0)",
    "pybind11-stubgen (>=2.5.5,<3.0.0)",
]
